@@ -1,4 +1,5 @@
 6.0
+	+ Enforce use of ncftp
 	+ Remove old events and cloud-prof integrations
 	+ Do not escape bash metacharacters in restore as it is not
 	  required once shell quote is in place
